--- a/Sparse RSS/res/xml/widgetinfo.xml
+++ b/Sparse RSS/res/xml/widgetinfo.xml
@@ -1,7 +1,9 @@
-<appwidget-provider
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="294dp"
-    android:minHeight="147dp"
-    android:updatePeriodMillis="0"
+<?xml version="1.0" encoding="utf-8"?>
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minWidth="180dp"
+    android:minHeight="40dp"
     android:initialLayout="@layout/homescreenwidget"
-    android:configure="com.pmsd.cometnews.widget.WidgetConfigActivity"/>
+    android:widgetCategory="keyguard|home_screen"
+    android:configure="com.pmsd.cometnews.widget.WidgetConfigActivity"
+    android:resizeMode="horizontal|vertical" android:initialKeyguardLayout="@layout/homescreenwidget">
+</appwidget-provider>
